WCM-555 prevent horizontal scrollbar appearence

--- a/content-targeting-display-web/src/main/resources/META-INF/resources/css/thumbnails_preview.scss
+++ b/content-targeting-display-web/src/main/resources/META-INF/resources/css/thumbnails_preview.scss
@@ -37,6 +37,7 @@
 	.dropdown-menu-content {
 		max-height: 310px;
 		min-width: 280px;
+		overflow-x: hidden;
 		overflow-y: scroll;
 		padding: 0;
 
